[tool.poetry]
name = "fastapi-cachepot"
version = "0.1.0"
description = "The FastAPI cache the way it should be."
authors = ["Aleksei Kotenko <alexey+github@kotenko.me>"]
readme = "README.md"
packages = [
    { include = "cachepot" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">= 0.106.0"
pydantic = "^2.0"
redis = { version = "^4.0.0", optional = true }


[tool.poetry.group.test.dependencies]
mypy = "^1.8.0"
types-redis = "^4.6.0.20240106"
pytest = "7.4.4"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.4"

[tool.mypy]
files = ["."]
python_version = "3.9"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

